--- a/tex/proto1.tex
+++ b/tex/proto1.tex
@@ -24,7 +24,8 @@
 \begin{document}
 %\maketitle
 
-\section{Измерения с помощью одного приемника - RS-twin-15mm-01}
+\section{Измерения с помощью одного приемника}
+\subsection{Анализ файла RS-twin-15mm-01}
 
 \begin{verbatim}
 <RAW MEASURMENTS COLLECTED:> 228
@@ -63,7 +64,7 @@
 \caption{Средние значения координат ubx(зеленый), easy(красный) и gnss(голубой)}
 \end{figure}
 
-\section{Измерения с помощью одного приемника - RS-twin-15mm-02}
+\subsection{Анализ файла RS-twin-15mm-02}
 
 \begin{verbatim}
 <RAW MEASURMENTS COLLECTED:>1155 
@@ -85,7 +86,7 @@
 
 Здесь видно что при большом количестве измерений результаты алгоритма easy становятся близки к ubx.
 
-\section{Измерения с помощью одного приемника - RS-twin-30mm-01}
+\subsection{Анализ файла RS-twin-30mm-01}
 
 \begin{verbatim}
 <RAW MEASURMENTS COLLECTED:>1093 
@@ -104,6 +105,13 @@
 \includegraphics{map6.png}
 \caption{Средние значения координат ubx(зеленый), easy(красный) и gnss(голубой)}
 \end{figure}
+
+К сожалению отобразить все измерения сложно, поэтому результаты осреднения кажутся странными.
+
+
+\section{Совместные измерения}
+\subsection{Простые измерения RS-twin-15mm-01, RS-twin-15mm-02}
+
+
 \end{document}
 
-К сожалению отобразить все измерения сложно, поэтому результаты осреднения кажутся странными
