--- a/tex/proto1.tex
+++ b/tex/proto1.tex
@@ -10,7 +10,7 @@
 %\definecolor{attcolor}{rgb}{0.2,0.9,0.9}
 %\definecolor{themecolor}{rgb}{0.9,0.5,0.5}
 %\usepackage{epstopdf}
-\usepackage{pscyr}
+%\usepackage{pscyr}
 %\usepackage{times}
 %\usepackage{fancyhdr}
 %\pagestyle{fancy}
