--- a/tex/L1.tex
+++ b/tex/L1.tex
@@ -5,7 +5,7 @@
 \usepackage[russian]{babel}
 \usepackage[cmex10]{amsmath}
 \usepackage{amsfonts}
-\usepackage{pscyr}
+%\usepackage{pscyr}
 %\usepackage{fancyhdr}
 %\pagestyle{fancy}
 \renewcommand{\rmdefault}{fjn}
