refine tex & code verification

--- a/tex/L1.tex
+++ b/tex/L1.tex
@@ -40,7 +40,7 @@ $T$ - тропосферна€ ошибка, м \\
 $I$ - »оносферна€ задержка, м \\
 $m_\rho$ - ќшибка вследствие многолучевого распространени€, м \\
 $\nu_\rho$ - ќшибка вызванна€ тепловым шумом, м \\
-‘азовые измерени€, м:
+‘азовые измерени€, кол-во циклов:
 \begin{equation}
 \phi=\lambda^{-1}(r+c(\delta t_r-\delta t_{sv})+T+I+m_\phi +\nu_\phi)+N
 \end{equation}
@@ -271,15 +271,22 @@ ambiguity set. This will be discussed in much greater detail later in the chapte
 \end{equation}
 «десь 
 \begin{itemize}
-\item {$\Delta\nabla\phi^{j,k}_{AB}$ - измеренна€ фазова€ разность.}
+\item {$\Delta\nabla\phi^{j,k}_{AB}$ - измеренна€ фазова€ разность, содержаща€ неоднозначность}
 \item {$\lambda^{-1}(\mathbf{e^j-e^k})\cdot\mathbf{\Delta x}$ - скал€рное произведение между разностью направл€ющих векторов на j-ый и $k$-ый спутники и искомым вектором относительных координат.}
-\item {$\Delta\nabla N^{j,k}_{AB}$ - целочисленна€ (в циклах) фазова€ разность не содержаща€ неоднозначности.}
+\item {$\Delta\nabla N^{j,k}_{AB}$ - целочисленна€ (в циклах) фазова€ неоднозначность.}
 \end{itemize}
 
-»сходное уравнение наблюдени€ дл€ процедуры \text{LAMBDA} \cite[стр.13, формула (2.1)]{Tiberius}:
+»сходное уравнение наблюдени€ дл€ процедуры LAMBDA \cite[стр.13, формула (2.1)]{Tiberius}:
 \begin{equation}
 y = Bb+Aa+e
 \end{equation}
+
+«десь
+$A$ и $B$ - модматрицы составл€ющие матрицу $H$
+\begin{itemize}
+\item {$b$ - разность между измеренными и вычисленными фазовыми разност€ми.}
+\item {$b$ - вектор относительных координат.}
+\end{itemize}
 
 –езультаты работы процедуры устранени€ неоднозначности позвол€ют 
 пересчитать вектор фазовых измерений \cite{Tiberius}, стр.15, формула 2.7:
