--- a/tex/L1.tex
+++ b/tex/L1.tex
@@ -27,7 +27,8 @@
 %Рассматриваются методы ...
 %\end{abstract}
 \section{Разностные измерения GPS}
-$(\Delta x,\Delta y,\Delta z)$ - искомый вектор относительных координат в системе ECEF.\\
+$(\Delta x,\Delta y,\Delta z)$ - искомый вектор относительных координат в системе ECEF.
+\\
 Кодовая псевдодальность, м:
 \begin{equation}
 \rho=r+c(\delta t_r-\delta t_{sv})+T+I+m_\rho +\nu_\rho
@@ -40,6 +41,7 @@ $T$ - тропосферная ошибка, м \\
 $I$ - Ионосферная задержка, м \\
 $m_\rho$ - Ошибка вследствие многолучевого распространения, м \\
 $\nu_\rho$ - Ошибка вызванная тепловым шумом, м \\
+\\
 Фазовые измерения, кол-во циклов:
 \begin{equation}
 \phi=\lambda^{-1}(r+c(\delta t_r-\delta t_{sv})+T+I+m_\phi +\nu_\phi)+N
@@ -276,7 +278,7 @@ ambiguity set. This will be discussed in much greater detail later in the chapte
 \item {$\Delta\nabla N^{j,k}_{AB}$ - целочисленная (в циклах) фазовая неоднозначность.}
 \end{itemize}
 
-Исходное уравнение наблюдения для процедуры LAMBDA \cite[стр.13, формула (2.1)]{Tiberius}:
+Исходное уравнение наблюдения для процедуры LAMBDA \cite[стр.13, формула (2.1)]{Tiberius}\cite{pugachev}:
 \begin{equation}
 y = Bb+Aa+e
 \end{equation}
@@ -356,6 +358,12 @@ b = \hat{b} - Q_{t} Q_a^{-1} (\hat{a}-a)
 \end{figure}
 
 \clearpage
+\section{Relative GNSS product list}
+\begin{itemize}
+\item{Tersus-GNSS, http://www.tersus-gnss.com/collections/all}
+\end{itemize}
+
+\clearpage
 \phantomsection
 \addcontentsline{toc}{chapter}{\bibname}	% Добавляем список литературы в оглавление
 \begin{thebibliography}{1}
@@ -366,7 +374,15 @@ Engineering Graduate School of Engineering and Management Air Force Institute of
 \bibitem{Welch} Greg Welch, Gary Bishop, An Introduction to the Kalman Filter. ACM-2001. ACM Inc.
 \bibitem{LambdaFAQ} Peter Joosten, Christian Tiberius, Lambda: FAQs. - GPS Solutions (2002) 6:109–114. http://www.utdallas.edu/~aiken/GPSCLASS/lambdaambigfulltext.pdf
 \bibitem{Tiberius} Paul de Jonge, Tiberius C. The LAMBDA method for integer ambiguity estimation:implementation aspects. http://www.citg.tudelft.nl
+\bibitem{Carrier} Mark Petovello, Cillian O'Driscoll. Carrier phase and its measurement for GNSS. -Inside GNSS, July-August 2010. http://www.insidegnss.com/auto/julaug10-solutions.pdf
+\bibitem{Teunissen} Robert Odolinski, Peter J. G. Teunissen, Dennis Odijk. Combined BDS, Galileo, QZSS and GPS single-frequency RTK. http://saegnss1.curtin.edu.au/Publications/2014/Odolinski2014Combined.pdf -19 December 2013 / Accepted: 2 April 2014. Springer/GPS Solutions.
 \end{thebibliography}
+
+%\clearpage
+%\phantomsection
+%\addcontentsline{toc}{chapter}{\bibname}	% Добавляем список литературы в оглавление
+%\bibliographystyle{plain}
+%\bibliography{L1_bibtex_db}
 \end{document}
 
 
