tex doc updated

--- a/tex/L1.tex
+++ b/tex/L1.tex
@@ -358,7 +358,7 @@ b = \hat{b} - Q_{t} Q_a^{-1} (\hat{a}-a)
 \end{figure}
 
 \clearpage
-\section{Relative GNSS product list}
+\section{Список продуктов relative}
 \begin{itemize}
 \item{Tersus-GNSS, http://www.tersus-gnss.com/collections/all}
 \end{itemize}
@@ -376,6 +376,9 @@ Engineering Graduate School of Engineering and Management Air Force Institute of
 \bibitem{Tiberius} Paul de Jonge, Tiberius C. The LAMBDA method for integer ambiguity estimation:implementation aspects. http://www.citg.tudelft.nl
 \bibitem{Carrier} Mark Petovello, Cillian O'Driscoll. Carrier phase and its measurement for GNSS. -Inside GNSS, July-August 2010. http://www.insidegnss.com/auto/julaug10-solutions.pdf
 \bibitem{Teunissen} Robert Odolinski, Peter J. G. Teunissen, Dennis Odijk. Combined BDS, Galileo, QZSS and GPS single-frequency RTK. http://saegnss1.curtin.edu.au/Publications/2014/Odolinski2014Combined.pdf -19 December 2013 / Accepted: 2 April 2014. Springer/GPS Solutions.
+\bibitem{Hein} Sebastian Carcanague, Oliver Julien, Willy Vigneau, Cristophe Macabiau, Dr. Gunter Hein. Finding the right Algorithm. Low-cost, Single frequency GPS/GLONASS RTK fro Road Users. Inside GNSS - Noveber/December 2013. http://www.insidegnss.com/auto/novdec13-WP.pdf
+\bibitem{Bahrami} M. Bahrami,  M. Ziebart. Instantaneous Doppler-aided RTK positioning with single frequency receivers. - Position Location and Navigation Symposium (PLANS), 2010 IEEE/ION.
+\bibitem{HowRelative} DR. Mark Petovello, How do you compute a relative position using GNSS? GNSS Solutions/Inside GNSS.
 \end{thebibliography}
 
 %\clearpage
